<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_thailand"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/TextStyle.SubTitle"
                android:gravity="center"
                android:text="THB"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2.5"
                style="@style/TextStyle.Title"
                android:gravity="center|end"
                android:layout_height="match_parent"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_japan"
                android:layout_height="match_parent"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/TextStyle.SubTitle"
                android:gravity="center"
                android:text="JPY"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2.5"
                style="@style/TextStyle.Title"
                android:gravity="center|end"
                android:layout_height="match_parent"
                android:text="0"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSeven"
                style="@style/TextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/seven" />

            <Button
                android:id="@+id/btnFour"
                style="@style/TextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/four" />

            <Button
                android:id="@+id/btnOne"
                style="@style/TextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/one" />

            <Button
                android:id="@+id/btnDot"
                style="@style/TextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/dot" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnEight"
                style="@style/TextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btnFive"
                style="@style/TextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/five" />

            <Button
                android:id="@+id/btnTwo"
                style="@style/TextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/two" />

            <Button
                android:id="@+id/btnZero"
                style="@style/TextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnNine"
                style="@style/TextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/nine" />

            <Button
                android:id="@+id/btnSix"
                style="@style/TextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/six" />

            <Button
                android:id="@+id/btnThree"
                style="@style/TextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/three" />

            <Button
                android:id="@+id/btnDelete"
                style="@style/TextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/delete" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
